# sqladmin

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LIBRARY_NOTES.md  README.md  THIRD-PARTY-NOTICES.md  TODO.md  docker-compose.yml  package-lock.json
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/app/: auth.py  config.py  connections.py  contract.py  errors.py  export_format.py  main.py  rate_limit.py  static.py  wire.py
backend/app/operations/: __init__.py  base.py  common.py  ddl.py  ddl_function_type.py  ddl_schema_sequence.py  ddl_table.py  ddl_view.py  delete_row.py  explain_query.py  export_rows.py  insert_row.py  (+19 more)
backend/tests/: conftest.py  test_auth.py  test_compiler.py  test_config.py  test_ddl_function_type_ops.py  test_ddl_function_type_sql.py  test_ddl_schema_sequence_ops.py  test_ddl_schema_sequence_sql.py  test_ddl_sql.py  test_ddl_table_preview.py  test_ddl_table_sql.py  test_delete_row.py  test_execute_ddl.py  test_explain_query.py  test_export_format.py  test_export_rows.py  test_function_definition.py  test_insert_row.py  test_list_columns.py  test_list_databases.py  test_list_dependencies.py  test_list_functions.py  test_list_inheritance.py  test_list_objects.py  test_list_rows.py  test_list_schemas.py  test_list_types.py  test_rate_limit.py  test_role_detail.py  test_roles.py  test_run_query.py  test_sequence_detail.py  test_static.py  test_table_privileges.py  test_table_structure.py  test_type_definition.py  test_update_row.py  test_view_definition.py  test_view_matview_ddl_ops.py  test_view_matview_ddl_sql.py  (+1 more)
(+269 files in other folders)
