[project]
name = "sqladmin-backend"
version = "0.1.0"
description = "SQLAdmin backend — FastAPI + asyncpg PostgreSQL admin API"
authors = [{ name = "Jimmy Karlsson", email = "jimmy.karlsson@gmail.com" }]
readme = "README.md"
license = "PolyForm-Noncommercial-1.0.0"
requires-python = ">=3.10,<4.0"
dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.32,<0.35",
    "asyncpg>=0.30,<0.31",
]

[project.urls]
Homepage = "https://github.com/jimka/sqladmin"
Repository = "https://github.com/jimka/sqladmin"
"Bug Tracker" = "https://github.com/jimka/sqladmin/issues"

[tool.poetry]
packages = [{ include = "app" }]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.24"
httpx = "^0.27"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.pyright]
# "standard", not "strict": strict drowns in noise from asyncpg shipping no type
# stubs (every DB call reads as "partially unknown"). Standard catches real type
# errors while the dynamic row shapes a schema-agnostic admin tool handles stay Any.
include = ["app", "tests"]
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"
pythonVersion = "3.10"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
